# code-agent

./: .gitignore  CLAUDE.md  README.md  agent_policy.md  pyproject.toml  task.yaml
agent/: __main__.py  config.py  core.py  memory.py  planner.py  policy.py  prompts.py
agent/tools/: __init__.py  files.py  git.py  registry.py  shell.py
code_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: agent_platform_product_spec.md
tests/: test_config.py  test_core.py  test_planner.py  test_policy.py  test_policy_scenarios.py  test_tools.py
